PORTAL-1622 (reopen): fix bug with new comment visibility, add titles, rewrite contrast color method

--- a/skin/classic/src/main/sass/_common.scss
+++ b/skin/classic/src/main/sass/_common.scss
@@ -4729,6 +4729,12 @@ table {
   .chats {
     padding-left: 0;
     padding-right: 0;
+
+    section {
+      .message {
+        margin-bottom: 0;
+      }
+    }
   }
 
   .nav-tabs ~ .tab-content {
